Updated Dockerfile to use JDK9 and experimental VM options that allows JVM ergonomics to read the memory values